# biomass-uav-stack

./: .gitignore  .gitmodules  Dockerfile  README.md
daeplanner-ws/docs/: daep-aep-dependencies.md  research-notes.md  setup-and-start.md  testing.md
daeplanner-ws/src/aeplanner/: LICENSE  README.md  aeplanner.rviz
daeplanner-ws/src/aeplanner/aeplanner/: nodelet_plugins.xml  package.xml
daeplanner-ws/src/aeplanner/aeplanner_evaluation/: package.xml
daeplanner-ws/src/aeplanner/kdtree/: CMakeLists.txt
daeplanner-ws/src/mrs_daep_supervisor/: CMakeLists.txt  package.xml
daeplanner-ws/src/mrs_daep_supervisor/launch/: mrs_daep_bridge.launch
daeplanner-ws/src/mrs_daep_supervisor/scripts/: pose_relay.py
docs/: daep-to-mrs-notes.md  utm-mac-setup.md
ros2-docker/: Dockerfile
simulation-ws/scripts/: generate_forest.py  missao_floresta.py  takeoff.py  traj_logger.py
simulation-ws/scripts/frontier_exploration/: CMakeLists.txt
simulation-ws/src/gazebo_resources/: package.xml
simulation-ws/tmux/one_drone/: session.yml
simulation-ws/tmux/one_drone_3dlidar/: session.yml
simulation-ws/tmux/one_drone_all_sensors/: session.yml
simulation-ws/tmux/one_drone_liosam/: session.yml
simulation-ws/tmux/one_drone_octomap_frontier/: rviz.rviz
workspace/scripts/: kumar_traj_to_uav1_setpoint.py
workspace/scripts/frontier_exploration/: package.xml
workspace/tmux/one_drone/: session.yml
workspace/tmux/one_drone_liosam/: session.yml
workspace/tmux/one_drone_octomap/: session.yml
workspace/tmux/one_drone_octomap_frontier/: session.yml
(+122 files in other folders)
